--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "postcss-nesting": "^11.2.1",
     "tailwindcss": "^3.2.7"
   }
 }
